--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
               <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <span class="subheading">Riauly Putra Asal Dari Pekanbaru </span>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
+    <!--div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
@@ -76,7 +76,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
         </div>
       </div>
-    </div>
+    </div-->
 
     <hr>
 
